# zephyr-low-power-tests

./: CMakeLists.txt  LICENSE.md  README.md  prj.conf  west.yml
references/: nordic-url-nrf9160dk-power-measurements-url.txt
src/: main.c
